KOV2025: